# Python_WEB

./: .gitignore  LICENSE
py_web_01/: README.md
py_web_01/personal_assistant/personal_assistant/: book_class.py  help.py  out_table.py
py_web_02/: Dockerfile  README.md  book_commands.py  pyproject.toml  requirements.txt
py_web_03/: README.md  factorize.py  file_parser.py  main.py  normalize.py
py_web_04/: Dockerfile  main.py  pyproject.toml
py_web_04/storage/: data.json
py_web_05/: README.md  exchange_data.json  main.py  pyproject.toml
py_web_05/websocket/: functions.py  producer.py
py_web_06/: README.md  pyproject.toml
py_web_06/database/: university.db
py_web_06/queries/: query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  query_ad_1.sql  query_ad_2.sql
py_web_06/scripts/: create_db.py  execute_queries.py  fill_data.py  university.sql
py_web_07/: README.md  alembic.ini  config.ini  main.py  pyproject.toml
py_web_07/alembic/: env.py
py_web_07/alembic/versions/: 337099e6578a_init.py
py_web_07/database/: db_connect.py  models.py
py_web_07/queries/: query.py
py_web_07/seeds/: fill_data.py
py_web_08/: README.md  pyproject.toml
py_web_08/mongo_engine_sample/: fill_database.py  models.py  query_cycle.py
py_web_08/pymongo/: config.ini  connect_db.py
py_web_08/rabbitMQ/: consumer.py  fill_db.py  models.py  producer.py
py_web_08/rabbitMQ/additional/: consumer_email.py  consumer_sms.py  fill_db.py  models.py  producer.py
py_web_09/: README.md  pyproject.toml
py_web_09/Scrapy/: main.py
py_web_09/beautiful_soup/: soup.py
py_web_09/beautiful_soup/json_data/: authors.json
py_web_10/: README.md  pyproject.toml
py_web_10/quotes/quotes/: settings.py
py_web_10/quotes/quotes_site/: apps.py  forms.py  models.py  views.py
py_web_10/quotes/quotes_site/migrations/: 0001_initial.py
py_web_10/quotes/quotes_site/static/quotes_site/: style.css
py_web_10/quotes/quotes_site/templates/quotes_site/: author_details.html  index.html
py_web_10/quotes/users/: forms.py  views.py
py_web_10/quotes/users/templates/users/: login.html  logout.html  register.html
py_web_11/: README.md  main.py  pyproject.toml
py_web_11/migrations/: env.py
py_web_11/migrations/versions/: 25bd36af2858_init.py  bc82bbbd0a95_init.py
py_web_11/src/: schemas.py
py_web_11/src/database/: connect_db.py  models.py
py_web_11/src/repository/: contacts.py
py_web_11/src/routes/: contacts.py
py_web_12/: README.md  main.py  pyproject.toml
py_web_12/migrations/versions/: 12cd6f18bbe9_init.py
py_web_12/src/: schemas.py
py_web_12/src/database/: models.py
py_web_12/src/repository/: contacts.py  users.py
py_web_12/src/routes/: auth.py  contacts.py
py_web_13/: README.md
py_web_13/Part 1/: pyproject.toml
py_web_13/Part 1/src/: schemas.py
py_web_13/Part 1/src/database/: db.py  models.py
py_web_13/Part 1/src/repository/: contacts.py  users.py
py_web_13/Part 1/src/routes/: auth.py  avatar.py  contacts.py
py_web_13/Part 1/src/services/: auth.py  email.py
py_web_13/Part 2/: pyproject.toml
py_web_13/Part 2/quotes/quotes/: settings.py  urls.py
py_web_13/Part 2/quotes/quotes_site/: admin.py  urls.py  views.py
py_web_13/Part 2/quotes/quotes_site/templates/quotes_site/: add_author.html  add_quote.html  base.html
py_web_13/Part 2/quotes/quotes_site/templates/quotes_site/includes/: quote.html
py_web_13/Part 2/quotes/users/: forms.py  views.py
py_web_13/Part 2/quotes/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html
py_web_14/: README.md  main.py  pyproject.toml
py_web_14/docs/source/: conf.py  index.rst
py_web_14/src/: schemas.py
py_web_14/src/database/: db.py
py_web_14/src/repository/: contacts.py  users.py
py_web_14/src/routes/: auth.py  avatar.py  contacts.py
py_web_14/src/services/: auth.py  email.py
py_web_14/tests/: test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
