[tool.poetry]
name = "py-web-05"
version = "0.1.0"
description = ""
authors = ["SiaAnalyst"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_web_05"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
aiofiles = "^23.1.0"
aiopath = "^0.6.11"
websockets = "^10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
