[tool.poetry]
name = "py-web-06"
version = "0.1.0"
description = ""
authors = ["SiaAnalyst"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_web_06"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
