[tool.poetry]
name = "py-web-07"
version = "0.1.0"
description = ""
authors = ["SiaAnalyst"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_web_07"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.4"
argparse = "^1.4.0"
alembic = "^1.9.4"
psycopg2-binary = "^2.9.5"
faker = "^17.0.0"
click-shell = "^2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
