[tool.poetry]
name = "py-web-08"
version = "0.1.0"
description = ""
authors = ["SiaAnalyst"]
readme = "README.md"
packages = [{include = "py_web_08"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
mongoengine = "^0.27.0"
redis = "^4.5.1"
pika = "^1.3.1"
faker = "^17.6.0"
redis-lru = "^0.1.2"
configparser = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
