[tool.poetry]
name = "py-web-09"
version = "0.1.0"
description = ""
authors = ["SiaAnalyst"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_web_09"}]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
scrapy = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
