[tool.poetry]
name = "py-web-10"
version = "0.1.0"
description = ""
authors = ["SiaAnalyst"]
readme = "README.md"
packages = [{include = "py_web_10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2 = "^2.9.5"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
