[tool.poetry]
name = "py-web-12"
version = "0.1.0"
description = ""
authors = ["SiaAnalyst"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_web_12"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.9"
psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"
alembic = "^1.10.3"
pydantic = "^1.10.7"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
