[tool.poetry]
name = "py-web-13-1"
version = "0.1.0"
description = ""
authors = ["SiaAnalyst"]
readme = "README.md"
packages = [{include = "py_web_10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2 = "^2.9.5"
psycopg2-binary = "^2.9.5"
beautifulsoup4 = "^4.11.2"
sqlalchemy = "^2.0.2"
requests = "^2.28.2"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
